--- a/package.json
+++ b/package.json
@@ -9,5 +9,11 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "axios": "^1.4.0",
+    "express": "^4.18.2",
+    "log-timestamp": "^0.3.0",
+    "retry": "^0.13.1"
+  }
 }
